<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule" />

    <item android:id="@+id/nav_study" android:icon="@drawable/ic_study_navigation" android:title="@string/study_tab" />

    <item android:id="@+id/nav_assistant" android:icon="@drawable/ic_assistant_navigation" android:title="@string/assistant_tab" />

    <item
        android:id="@+id/nav_import"
        android:icon="@drawable/ic_import"
        android:title="@string/import_tab" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
